--- a/src/App.scss
+++ b/src/App.scss
@@ -91,6 +91,7 @@
   background-image: url('Media/bg\ \(1\).png');
   margin-top: 20px;
   padding-bottom: 40px;
+  color: black;
 }
 .footer{
   background-color: #12436B;
