--- a/src/App.scss
+++ b/src/App.scss
@@ -56,10 +56,10 @@
   margin-bottom: 30px;
 }
 .roadmap{
-  background-image: url("Media/Frame-13-3.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  // background-image: url("Media/Frame-13-3.png");
+  // background-size: cover;
+  // background-repeat: no-repeat;
+  // background-attachment: fixed;
   padding-top: 30px;
   margin-bottom: 60px;
 }
@@ -72,12 +72,6 @@
 }
 .styles_faq-row-wrapper__3vA1D .styles_row-body__1NvUo .styles_faq-row__2YF3c .styles_row-title__1YiiY .styles_row-title-text__1MuhU{
   padding: 5px!important;
-}
-.faq-row {
-  background: none;
-  border-bottom: none;
-  box-shadow: 1px 1px 1px 1px;
-  opacity: 0px;
 }
 
 .styles_faq-row-wrapper__3vA1D .styles_faq-row__2YF3c{
