--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,22 @@
-.navbar{
-  background-color: #12436B;
+.navbar {
+  background-color: #12436b;
 }
-.c1{
+.c1 {
   color: white !important;
 }
-.Hero{
+.Hero {
   padding-top: 70px;
   min-height: 540px;
-  background-image:url("Media/bg.png") ;
+  background-image: url("Media/bg.png");
   background-repeat: no-repeat;
+  position: relative;
+  
   color: white;
 }
-
-.feature{
+.par{
+  position: absolute;
+}
+.feature {
   background-image: url("Media/Section-31.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,74 +25,134 @@
   margin-right: 20px;
   margin-left: 20px;
 }
-.boxes{
+.boxes {
   padding-top: 15px;
   padding-bottom: 20px;
 }
-.shad{
-  box-shadow: 0 8px 40px 0 rgba(16, 16, 16, 0.1)!important;
+.shad {
+  box-shadow: 0 8px 40px 0 rgba(16, 16, 16, 0.1) !important;
   border-radius: 3px;
   background: white;
 }
-.coins{
+.coins {
   padding-top: 20px;
   margin-bottom: 50px;
 }
-.work{
+.work {
   background-image: url("Media/bg\ \(1\).png");
   background-repeat: no-repeat;
   background-size: cover;
 }
-.interface{
+.token-bg1 {
+  padding-top: 40px;
+  padding-bottom: 30px;
+  background-image: url("Media/Frame-13-3.png") ;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.token-bg2 {
+  position: relative;
+  width: 100%;
+  height: 18.75rem;
+  background-image: url("Media/token-base.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 50%;
+  max-width: 73.125rem;
+  margin: 0 auto 2.5rem;
+}
+.token-bg2::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url("Media/token-hover.png");
+  background-size: contain;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+.Liquidity{
+  position: absolute;
+  left: 0;
+  top:40px;
+}
+.growth-hacking{
+
+  position: absolute;
+  left: 0;
+  bottom: 7rem;
+}
+.team-locked{
+  top:40px;
+  position: absolute;
+  right: 0;
+}
+.public-sale{
+  position: absolute;
+  right: 0;
+  bottom: 7rem;
+}
+.interface {
   padding-top: 40px;
   margin-bottom: 30px;
 }
-.color{
-  color:#E17863;
+.color {
+  color: #e17863;
 }
-.p-interface{
+.p-interface {
   font-size: 30px;
 }
-.utilities{
+.utilities {
   display: flex;
   flex-wrap: wrap;
   margin-top: 30px;
   margin-bottom: 30px;
 }
-.roadmap{
-  // background-image: url("Media/Frame-13-3.png");
-  // background-size: cover;
-  // background-repeat: no-repeat;
+.roadmap {
+  background-image: url("Media/Frame-13-3.png");
+  background-size: contain;
+  position: relative;
+  background-repeat: no-repeat;
   // background-attachment: fixed;
   padding-top: 30px;
   margin-bottom: 60px;
 }
 
-.styles_faq-row-wrapper__3vA1D h2{
-  padding: 10px; 
+.styles_faq-row-wrapper__3vA1D h2 {
+  padding: 10px;
 }
-.styles_faq-row-wrapper__3vA1D .styles_row-body__1NvUo .styles_faq-row__2YF3c{
-  margin: 20px ;
+.styles_faq-row-wrapper__3vA1D .styles_row-body__1NvUo .styles_faq-row__2YF3c {
+  margin: 20px;
 }
-.styles_faq-row-wrapper__3vA1D .styles_row-body__1NvUo .styles_faq-row__2YF3c .styles_row-title__1YiiY .styles_row-title-text__1MuhU{
-  padding: 5px!important;
+.styles_faq-row-wrapper__3vA1D
+  .styles_row-body__1NvUo
+  .styles_faq-row__2YF3c
+  .styles_row-title__1YiiY
+  .styles_row-title-text__1MuhU {
+  padding: 5px !important;
 }
 
-.styles_faq-row-wrapper__3vA1D .styles_faq-row__2YF3c{
+.styles_faq-row-wrapper__3vA1D .styles_faq-row__2YF3c {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-bottom: none;
 }
-.styles_faq-row-wrapper__3vA1D .styles_row-body__1NvUo .styles_faq-row__2YF3c .styles_row-content__QOGZd .styles_row-content-text__2sgAB{
+.styles_faq-row-wrapper__3vA1D
+  .styles_row-body__1NvUo
+  .styles_faq-row__2YF3c
+  .styles_row-content__QOGZd
+  .styles_row-content-text__2sgAB {
   padding: 10px !important;
 }
-.fq{
-  background-image: url('Media/bg\ \(1\).png');
+.fq {
+  background-image: url("Media/bg\ \(1\).png");
   margin-top: 20px;
   padding-bottom: 40px;
   color: black;
 }
-.footer{
-  background-color: #12436B;
+.footer {
+  background-color: #12436b;
   color: white;
   padding-top: 20px;
   padding-bottom: 20px;
